# prodstats

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.chamber  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
.circleci/: config.yml
config/: parsers.yaml
data/: prodstat_definitions.json
redis/: Dockerfile  redis.conf
scripts/: deploy.py  init_db.sql  release.py  seed_db.py
src/prodstats/: __init__.py  __main__.py  config.py  const.py  exc.py  executors.py  loggers.py  main.py  manage.py
src/prodstats/api/: helpers.py
src/prodstats/calc/: __init__.py  geom.py  prod.py  sets.py  util.py  well.py
src/prodstats/collector/: __init__.py  bases.py  client.py  frac_focus_client.py  ihs_client.py
src/prodstats/cq/: __init__.py  routers.py  signals.py  task.py  tasks.py  util.py  worker.py
src/prodstats/db/: __init__.py  mixins.py
src/prodstats/ext/: orjson.py  sentry.py
src/prodstats/parsing/: __init__.py  criteria.py  parser.py  rules.py  util.py
src/prodstats/schemas/: __init__.py  bases.py  credentials.py  database_url.py  frac_focus.py  prod.py  prodstat.py  task.py  well.py
src/prodstats/util/: __init__.py  aio.py  context.py  dt.py  enums.py  geo.py  humanize.py  iterables.py  jsontools.py  pd.py  (+4 more)
terraform/: .terraformignore  ecs.tf  main.tf  service_discovery.tf  sqs.tf  variables.tf
terraform/service_target_tracking/: main.tf
tests/: __init__.py  conftest.py  models.py  schemas.py  sitecustomize.py  test_config.py  test_executors.py  test_loggers.py  test_manage.py  test_strings.py  utils.py
tests/api/: test_health.py  test_pagination.py  test_prodstats.py  test_tasks_enpoint.py
tests/calc/: test_prod_calc.py  test_sets.py  test_well_calc.py
tests/collector/: test_client.py  test_ihs_client.py
tests/cq/: test_tasks.py
tests/db/: test_db_init.py  test_mixins.py  test_model.py
tests/ext/: test_metrics.py  test_orson.py  test_sentry.py
tests/fixtures/: fracs_h.json  fracs_v.json  geoms_h.json  geoms_v.json  ihs_prod.json  ihs_well_shapes.json  ihs_wells.json  prod_h.json  prod_headers_h.json  prod_headers_v.json  prodstats.json  task_list.json  wells_h.json  wells_v.json
tests/parsing/: test_criteria.py  test_parser.py  test_rules.py  test_util.py
tests/schemas/: test_credentials.py  test_prod_schema.py  test_well_schema.py
tests/util/: test_context.py  test_deco.py  test_enum.py  test_iterables.py  test_jsontools.py  test_locator.py  test_util.py  test_yammler.py
(+68 files in other folders)
